package xunit;

public interface Test {

    void run();
}
