@startuml

!include ../../../commons.style
skinparam ranksep 50

class Main <<Client>>

interface Test <<Component>> {
  + {abstract} <<doSomething>> run()
}

Main . Test

class Assertion <<Leaf>> {
  + <<doSomething>> run()
}
Test <|.. Assertion

class TestSuite <<Composite>> {
  + <<doSomething>> run()
  __
  + add(Test)
  + remove(Test)
}
Test <|.. TestSuite
TestSuite *--> "1..n\ntests" Test

@enduml
